# ic-chatbot

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
agent/: Cargo.toml
agent/src/: main.rs  main2.rs
flow_chart/: blocks.json
flow_chart/intents/: 02a7cc38-034f-4cea-87e7-f242fd802126.json  02a7cc38-034f-4cea-87e7-f242fd802126_usersays_en.json  0b18585e-6ce5-4732-9019-a815ceafff98.json  0b18585e-6ce5-4732-9019-a815ceafff98_usersays_en.json  105de056-7162-4761-9132-33055b7cffd4.json  105de056-7162-4761-9132-33055b7cffd4_usersays_en.json  118ba8a5-103a-4c54-91f6-bf842716c8f2.json  118ba8a5-103a-4c54-91f6-bf842716c8f2_usersays_en.json  125d249d-75af-4b3f-acb8-60ffee2ed35f.json  125d249d-75af-4b3f-acb8-60ffee2ed35f_usersays_en.json  218bdb64-63e0-4095-aec0-a7a31a749c92.json  218bdb64-63e0-4095-aec0-a7a31a749c92_usersays_en.json  224a777a-d707-450d-b539-8652af5da50f.json  224a777a-d707-450d-b539-8652af5da50f_usersays_en.json  22516e7c-f772-4626-a5a4-568b9bde3f69.json  22516e7c-f772-4626-a5a4-568b9bde3f69_usersays_en.json  23db5d24-ee90-4f04-8c9c-e172077a8d1f.json  23db5d24-ee90-4f04-8c9c-e172077a8d1f_usersays_en.json  243c1aba-57af-48dd-a1cd-c669c239aba4.json  243c1aba-57af-48dd-a1cd-c669c239aba4_usersays_en.json  2d78c5ba-b537-449e-bae9-93311841b7e9.json  2d78c5ba-b537-449e-bae9-93311841b7e9_usersays_en.json  2dce3aa7-380e-45bf-a867-fb402d0a3c89.json  2dce3aa7-380e-45bf-a867-fb402d0a3c89_usersays_en.json  2f6e54b4-e188-4f80-a34a-6e4b8055910b.json  2f6e54b4-e188-4f80-a34a-6e4b8055910b_usersays_en.json  (+135 more)
src/ic_chatbot/: Cargo.toml  (+1 more)
(+24 files in other folders)
