[workspace]
members = [
    ".",
]

[package]
name = "agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"

ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
ic-agent = "0.8.0"
candid = "0.7.6"
ic-types = "0.2.2"
async-trait = "0.1.35"
base32 = "0.4.0"
base64 = "0.12.3"
byteorder = "1.3.2"
garcon = { version = "0.2.3", features = ["async"] }
hex = "0.4.0"
http = "0.2.3"
leb128 = "0.2.4"
mime = "0.3.16"
openssl = "0.10.32"
rand = "0.7.2"
rustls = "0.19.0"
ring = { version = "0.16.11", features = ["std"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.1"
simple_asn1 = "0.5.4"
thiserror = "1.0.20"
url = "2.1.0"
webpki-roots = "0.20.0"
tokio = "1.11.0"