[workspace]
members = [
    ".",
]
[package]
name = "agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
anyhow = { version = "1.0", features = ["backtrace"] }
candid = "0.7.4"
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
garcon = { version = "0.2.3", features = ["async"] }
hex = "0.4.2"
humantime = "2.0.1"
ic-agent = {version = "0.8" }
ic-utils = {version = "0.6" }
pem = "0.8.1"
ring = "0.16.11"
serde = "1.0.115"
serde_json = "1.0.57"
tokio = { version = "1.18.5", features = ["full"] }
thiserror = "1.0.24"